# sift

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  sift-queue-watcher.py  tgbot-url-routing.patch  vault-ingest.yaml.example
.github/workflows/: test.yml
src/sift/: __init__.py  __main__.py  classify.py  cli.py  config.py  pipeline.py  queue.py  writer.py
src/sift/enricher/: __init__.py  base.py  claude_cli.py  openrouter.py  registry.py
src/sift/extractors/: __init__.py  base.py  dispatch.py  generic_url.py  tiktok.py  twitter.py  youtube.py  ytdlp_base.py
tests/: conftest.py  test_classify.py  test_cli_add_run.py  test_cli_init.py  test_config.py  test_pipeline.py  test_queue.py  test_smoke.py  test_writer.py
tests/enricher/: test_base.py  test_openrouter.py  test_registry.py
tests/extractors/: test_base.py  test_dispatch.py  test_ffmpeg_location.py  test_generic_url.py  test_tiktok.py  test_twitter.py  test_youtube.py
