[project]
name = "sift"
version = "0.1.0"
description = "The working bridge between social media and your second brain. URL in, clean vault note out."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Carlos Vargas", email = "carlos@carloscae.com" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "yt-dlp>=2026.3.17,<2027",
    "readability-lxml>=0.8.1",
    "lxml>=5.0",
    "python-slugify>=8.0",
    "playwright>=1.60.0",
]

[project.scripts]
sift = "sift.cli:main"

[project.urls]
Homepage = "https://github.com/carloscae/sift"
Issues = "https://github.com/carloscae/sift/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
